--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css"
     />
     <link rel="stylesheet" href="%PUBLIC_URL%/reset.css" />
-
+    <link rel="stylesheet" type="text/css" href="lib/css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
